# keepachangelog-manager

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  create_draft_release.yml  publish_to_pypi.yml  quality_checks.yml  release.yml  zizmor.yml
.github_old/: publish_to_pypi.yml
changelogmanager/: __main__.py  change_types.py  changelog.py  changelog_reader.py  cli.py  config.py  github.py  gui.py  runtime_logging.py  skill_bundle.py
changelogmanager/_llvm_diagnostics/: __init__.py  formatters.py  messages.py  parser.py  utils.py
changelogmanager/skills/: __init__.py
changelogmanager/skills/keepachangelog-manager-cli/: SKILL.md
docs/: CI.md  cli.md  contributing.md  gui.md  index.md  installation.md  quickstart.md  requirements.txt  workflows.md
scripts/: basic_integration_tests.sh  basic_tests.sh
scripts/fixtures/: component-config.template.yml  sample-changelog.md
tests/: changelog_test.py  cli_test.py  utils.py
tests/test_basic/: test_change_types_and_config.py  test_changelog.py  test_changelog_reader.py  test_cli.py  test_github.py  test_llvm_diagnostics.py  test_main.py  test_skill_bundle.py
tests/test_hypothesis/: test_change_types_properties.py  test_changelog_properties.py  test_config_properties.py
tests/test_llvm_diagnostics/: __init__.py  test_messages.py  test_parser.py
tests/tests_bug_search_suite/: test_changelog_core.py  test_changelog_reader.py  test_cli_integration.py  test_config.py  test_edge_cases.py  test_new_features.py
